--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.1+4
+version: 1.0.2+5
 
 environment:
   sdk: ^3.7.0
@@ -19,6 +19,8 @@ dependencies:
   fluttertoast: ^8.2.12
   photo_view: ^0.15.0
   shared_preferences: ^2.5.2
+  collection: ^1.18.0
+  image: ^4.0.17
   device_info_plus: ^11.3.2
 #  google_maps_place_picker_mb: ^3.1.2
   package_info_plus: ^4.1.0
@@ -54,7 +56,7 @@ dependencies:
   flutter_email_sender: ^7.0.0
   video_player: ^2.9.3
   gif_view: ^0.4.0
-  intl: ^0.19.0
+  intl: ^0.20.2
   google_maps_flutter: ^2.11.0
   flutter_easyloading: ^3.0.5
   enum_to_string: ^2.2.0
@@ -72,6 +74,7 @@ dependencies:
   flutter_widget_from_html: ^0.16.0
   flutter_launcher_icons: ^0.14.3
   flutter_native_splash: ^2.4.5
+
 flutter_launcher_icons:
   android: true
   ios: true
