--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -53,7 +53,7 @@
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="https" android:host="www.caraqar.co" />
+                <data android:scheme="https" android:host="caraqaar.com" />
                 <data android:scheme="whatsapp"/>
             </intent-filter>
         </activity>
