--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.2+5
 
 environment:
-  sdk: ^3.7.0
+  sdk: '>=3.7.0 <4.0.0'
 
 dependencies:
   flutter:
@@ -31,7 +31,7 @@ dependencies:
   google_sign_in: ^6.2.2
   firebase_analytics: ^11.4.4
   flutter_screenutil: ^5.9.3
-  firebase_dynamic_links: ^6.1.4      # discontinued
+  firebase_dynamic_links: ^6.1.4   # discontinued
   share_plus: ^10.1.4
   path_provider: ^2.1.5
   carousel_slider: ^5.0.0
@@ -42,6 +42,7 @@ dependencies:
   sign_in_with_apple: ^6.1.4
   intl_phone_number_input: ^0.7.4
   #  firebase_remote_config: ^3.0.15
+  flutter_staggered_grid_view: ^0.7.0
   flutter_vector_icons: ^2.0.0
   pin_code_fields: ^8.0.1
   file_picker: ^9.0.2
@@ -74,17 +75,19 @@ dependencies:
   flutter_widget_from_html: ^0.16.0
   flutter_launcher_icons: ^0.14.3
   flutter_native_splash: ^2.4.5
+  google_fonts: ^6.2.1
+  flutter_svg: ^2.2.0
 
 flutter_launcher_icons:
   android: true
   ios: true
-  image_path: "assets/icon/icon.png"
+  image_path: "assets/icon/ic_icon.png"
   min_sdk_android: 23
 flutter_native_splash:
   color: "#ffffff"
-  image: assets/icon/icon.png
+  image: assets/icon/ic_icon.png
   branding: assets/images/trans.png
-  image_dark: assets/icon/icon.png
+  image_dark: assets/icon/ic_icon.png
   color_dark: "#ffffff"
   android_gravity: fill
   android_12:
