--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,17 +85,25 @@ flutter_launcher_icons:
   ios: true
   image_path: "assets/icon/ic_icon.png"
   min_sdk_android: 23
+  adaptive_icon_background: "assets/icon/old_app_icon.png"
+  adaptive_icon_foreground: "assets/icon/old_app_icon.png"
+
 flutter_native_splash:
   color: "#ffffff"
-  image: assets/icon/ic_icon.png
+  image: assets/icon/old_app_icon.png
   branding: assets/images/trans.png
   image_dark: assets/icon/ic_icon.png
   color_dark: "#ffffff"
   android_gravity: fill
   android_12:
-    android: true
-    ios: true
-    web: false
+    image: assets/icon/old_app_icon.png
+    color: "#ffffff"
+    image_dark: assets/icon/old_app_icon.png
+    color_dark: "#ffffff"
+    branding: assets/images/trans.png
+  android: true
+  ios: true
+  web: false
 
 
 
