UI change day 13

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -127,6 +127,7 @@ flutter:
     - assets/images/
     - assets/videos/
     - assets/icon/
+    - assets/profiles/
 
   fonts:
     - family: AppFonts
