--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,7 @@ dependencies:
   google_sign_in: ^6.2.2
   firebase_analytics: ^11.4.4
   flutter_screenutil: ^5.9.3
-  firebase_dynamic_links: ^6.1.4   # discontinued
-  share_plus: ^10.1.4
+  share_plus: ^12.0.0
   path_provider: ^2.1.5
   carousel_slider: ^5.0.0
   cached_network_image: ^3.4.1
@@ -80,6 +79,7 @@ dependencies:
   marquee: ^2.3.0
   font_awesome_flutter: ^10.9.0
   geocoding: ^4.0.0
+  app_links: ^6.4.1
 
 flutter_launcher_icons:
   android: true
